--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
             </div>
         </article>
     </section>
+    <section>
+        <div id="SOHUCS" sid="请将此处替换为配置SourceID的语句"></div>
+        <script charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/changyan.js" ></script>
+        <script type="text/javascript">
+        window.changyan.api.config({
+        appid: 'cyteSxLlo',
+        conf: 'prod_b49678f2bab3d4177119c39254fc9ceb'
+        });
+        </script>
+    </section>
 </body>
 
 </html>
