添加留言框

--- a/index.html
+++ b/index.html
@@ -84,14 +84,8 @@
         </article>
     </section>
     <section>
-        <div id="SOHUCS" sid="请将此处替换为配置SourceID的语句"></div>
-        <script charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/changyan.js" ></script>
-        <script type="text/javascript">
-        window.changyan.api.config({
-        appid: 'cyteSxLlo',
-        conf: 'prod_b49678f2bab3d4177119c39254fc9ceb'
-        });
-        </script>
+        <div id="uyan_frame"></div>
+        <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
     </section>
 </body>
 
