--- a/ajax知识点/ajax总结.html
+++ b/ajax知识点/ajax总结.html
@@ -88,7 +88,7 @@
 					2.如果上传文件必须使用post 
 			form表单上传文件
 				1form表单属性需要设置 2method='post' 3.enctype='multipart/form-data' 
-				4.nctype 默认值是 application/x-www-form-urlencoded
+				4.enctype 默认值是 application/x-www-form-urlencoded
                 提交文件 multipart/form-data
 
                 php中用$_FILES接收提交的文件（临时文件）
