--- a/index.html
+++ b/index.html
@@ -38,10 +38,17 @@
         <aside>
 
             <ul>
-                <li><a href="./h5c3知识点.html">h5c3新增特性</a></li>
+                <li><a href="./html_content/preview/h5c3知识点.html">h5c3新增特性</a></li>
                 <li><a href="./javascript知识点/js基础知识.html">javascript</a></li>
-                <li><a href="./js高阶/js高阶.html">javascript进阶</a></li>
-                <li><a href="./ajax知识点/ajax总结.html">ajax异步通信</a></li>
+                <li><a href="javascript:void(0)">javascript进阶</a>
+                    <div>
+                        <ul>
+                            <li><a href="./js高阶/js高阶.html"></a></li>
+                            <li><a href="./html_content/preview/javascript进阶之路2.html"></a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="./html_content/preview/ajax知识点总结.html">ajax异步通信</a></li>
                 <li><a href="#">移动端相关知识</a></li>
                 <li><a href="javascript:void(0)">前端相关框架总结</a>
                     <div>
@@ -54,6 +61,7 @@
                         </ul>
                     </div>
                 </li>
+                <li><a href="./html_content/preview/php入门总结.html">php入门</a></li>
                 <li><a href="#">前端功能模块总结</a></li>
                 <li><a href="./随记手册.html">随手散记</a></li>
             </ul>
