--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li><a href="javascript:void(0)">javascript进阶</a>
                     <div>
                         <ul>
-                            <li><a href="./js高阶/js高阶.html"></a>js高阶</li>
+                            <li><a href="./js高阶/js高阶.html">js高阶</a></li>
                             <li><a href="./html_content/preview/javascript进阶之路2.html">js进阶2</a></li>
                         </ul>
                     </div>
