--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <a href="./html_content/preview/ajax知识点总结.html">ajax异步通信</a>
                 </li>
                 <li>
-                    <a href="./html_content/移动web开发.html">移动端相关知识</a>
+                    <a href="./html_content/preview/移动web开发.html">移动端相关知识</a>
                 </li>
                 <li>
                     <a href="javascript:void(0)">前端相关框架总结</a>
@@ -86,7 +86,7 @@
                                 <a href="#">vue框架</a>
                             </li>
                             <li>
-                                <a href="./html_content/jquery总结.html">jQuery框架</a>
+                                <a href="./html_content/preview/jquery总结.html">jQuery框架</a>
                             </li>
                             <li>
                                 <a href="#">bootstrap框架</a>
