--- a/切割轮播图/qiege.html
+++ b/切割轮播图/qiege.html
@@ -35,7 +35,7 @@
             width: 600px;
             height: 400px;
             margin: 60px auto;
-            border: 1px solid red;
+            /* border: 1px solid red; */
             cursor: pointer;
 
         }
