--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                 <li>
                     <a href="./随记手册.html">随手散记</a>
                 </li>
+                <li>
+                    <a href="#">ES6,ES7,ES8语法</a>
+                </li>
             </ul>
         </aside>
         <article>
